v2-website/versioned_docs/version-0.29/layout-props.md
---
id: layout-props
title: Layout Props
original_id: layout-props
---

### Props

- [`marginRight`](layout-props.md#marginright)
- [`alignItems`](layout-props.md#alignitems)
- [`borderBottomWidth`](layout-props.md#borderbottomwidth)
- [`borderLeftWidth`](layout-props.md#borderleftwidth)
- [`borderRightWidth`](layout-props.md#borderrightwidth)
- [`borderTopWidth`](layout-props.md#bordertopwidth)
- [`borderWidth`](layout-props.md#borderwidth)
- [`bottom`](layout-props.md#bottom)
- [`flex`](layout-props.md#flex)
- [`flexDirection`](layout-props.md#flexdirection)
- [`flexWrap`](layout-props.md#flexwrap)
- [`height`](layout-props.md#height)
- [`justifyContent`](layout-props.md#justifycontent)
- [`left`](layout-props.md#left)
- [`margin`](layout-props.md#margin)
- [`marginBottom`](layout-props.md#marginbottom)
- [`marginHorizontal`](layout-props.md#marginhorizontal)
- [`marginLeft`](layout-props.md#marginleft)
- [`alignSelf`](layout-props.md#alignself)
- [`marginTop`](layout-props.md#margintop)
- [`marginVertical`](layout-props.md#marginvertical)
- [`maxHeight`](layout-props.md#maxheight)
- [`maxWidth`](layout-props.md#maxwidth)
- [`minHeight`](layout-props.md#minheight)
- [`minWidth`](layout-props.md#minwidth)
- [`padding`](layout-props.md#padding)
- [`paddingBottom`](layout-props.md#paddingbottom)
- [`paddingHorizontal`](layout-props.md#paddinghorizontal)
- [`paddingLeft`](layout-props.md#paddingleft)
- [`paddingRight`](layout-props.md#paddingright)
- [`paddingTop`](layout-props.md#paddingtop)
- [`paddingVertical`](layout-props.md#paddingvertical)
- [`position`](layout-props.md#position)
- [`right`](layout-props.md#right)
- [`top`](layout-props.md#top)
- [`width`](layout-props.md#width)
- [`zIndex`](layout-props.md#zindex)

---

# Reference

## Props

### `marginRight`

`marginRight` works like `margin-right` in CSS. See http: for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`aligns children in the cross direction. For example, if children are flowing vertically,` controls how they align horizontally. It works like `in CSS, except the default value is` instead of ``. See for more detail.

| Type                                                | Required |
| --------------------------------------------------- | -------- |
| enum('flex-start', 'flex-end', 'center', 'stretch') | No       |

---

### ``

`works like` in CSS. See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`works like` in CSS. See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`works like` in CSS. See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`works like` in CSS. See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`works like` in CSS. See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`` is the number of logical pixels to offset the bottom edge of this component.

It works similarly to `` in CSS, but in React Native you must use logical pixel units, rather than percents, ems, or any of that.

See for more details of how `` affects layout.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

In React Native `does not work the same way that it does in CSS.` is a number rather than a string, and it works according to the `` library at .

When `is a positive number, it makes the component flexible and it will be sized proportional to its flex value. So a component with` set to 2 will take twice the space as a component with `` set to 1.

When `is 0, the component is sized according to` and `` and it is inflexible.

When `is -1, the component is normally sized according` and `. However, if there's not enough space, the component will shrink to its` and ``.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`controls which directions children of a container go.` goes left to right, `goes top to bottom, and you may be able to guess what the other two do. It works like` in CSS, except the default is ``. See for more detail.

| Type                                                   | Required |
| ------------------------------------------------------ | -------- |
| enum('row', 'row-reverse', 'column', 'column-reverse') | No       |

---

### ``

`controls whether children can wrap around after they hit the end of a flex container. It works like` in CSS. See for more detail.

| Type                   | Required |
| ---------------------- | -------- |
| enum('wrap', 'nowrap') | No       |

---

### ``

`` sets the height of this component.

It works similarly to `` in CSS, but in React Native you must use logical pixel units, rather than percents, ems, or any of that. See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`aligns children in the main direction. For example, if children are flowing vertically,` controls how they align vertically. It works like `` in CSS. See for more detail.

| Type                                                                      | Required |
| ------------------------------------------------------------------------- | -------- |
| enum('flex-start', 'flex-end', 'center', 'space-between', 'space-around') | No       |

---

### ``

`` is the number of logical pixels to offset the left edge of this component.

It works similarly to `` in CSS, but in React Native you must use logical pixel units, rather than percents, ems, or any of that.

See for more details of how `` affects layout.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

Setting `has the same effect as setting each of`, `,`, and ``.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`works like` in CSS. See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

Setting `has the same effect as setting both` and ``.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`works like` in CSS. See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`controls how a child aligns in the cross direction, overriding the` of the parent. It works like `` in CSS. See for more detail.

| Type                                                        | Required |
| ----------------------------------------------------------- | -------- |
| enum('auto', 'flex-start', 'flex-end', 'center', 'stretch') | No       |

---

### ``

`works like` in CSS. See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

Setting `has the same effect as setting both` and ``.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`` is the maximum height for this component, in logical pixels.

It works similarly to `` in CSS, but in React Native you must use logical pixel units, rather than percents, ems, or any of that.

See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`` is the maximum width for this component, in logical pixels.

It works similarly to `` in CSS, but in React Native you must use logical pixel units, rather than percents, ems, or any of that.

See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`` is the minimum height for this component, in logical pixels.

It works similarly to `` in CSS, but in React Native you must use logical pixel units, rather than percents, ems, or any of that.

See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`` is the minimum width for this component, in logical pixels.

It works similarly to `` in CSS, but in React Native you must use logical pixel units, rather than percents, ems, or any of that.

See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`works like` in CSS. It's like setting each of `,`, `, and` to the same thing. See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`works like` in CSS. See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

Setting `is like setting both of` and ``.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`works like` in CSS. See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`works like` in CSS. See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`works like` in CSS. See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

Setting `is like setting both of` and ``.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`in React Native is similar to regular CSS, but everything is set to` by default, so `` positioning is always relative to the parent.

If you want to position a child using specific numbers of logical pixels relative to its parent, set the child to have `` position.

If you want to position a child relative to something that is not its parent, don't use styles for that. Use the component tree.

See for more details on how `` differs between React Native and CSS.

| Type                         | Required |
| ---------------------------- | -------- |
| enum('absolute', 'relative') | No       |

---

### ``

`` is the number of logical pixels to offset the right edge of this component.

It works similarly to `` in CSS, but in React Native you must use logical pixel units, rather than percents, ems, or any of that.

See for more details of how `` affects layout.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`` is the number of logical pixels to offset the top edge of this component.

It works similarly to `` in CSS, but in React Native you must use logical pixel units, rather than percents, ems, or any of that.

See for more details of how `` affects layout.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`` sets the width of this component.

It works similarly to `` in CSS, but in React Native you must use logical pixel units, rather than percents, ems, or any of that. See for more details.

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### ``

`controls which components display on top of others. Normally, you don't use`. Components render according to their order in the document tree, so later components draw over earlier ones. `` may be useful if you have animations or custom modal interfaces where you don't want this behavior.

It works like the CSS `property - components with a larger` will render on top. Think of the z-direction like it's pointing from the phone into your eyeball. See for more detail.

On iOS, `may require`s to be siblings of each other for it to work as expected.

| Type   | Required |
| ------ | -------- |
| number | No       |
